Add sample size and links to the Collex DTO (#320)
* Add sample size and links to the Collex DTO

* auto patch increment

* Add sample links properly

* Update API

* auto patch increment

---------
